tests/codegen/fail/object/derive_field_non_output_return_type.stderr
error[E0277]: the trait bound `ObjB: IsOutputType<__S>` is not satisfied
 --> fail/object/derive_field_non_output_return_type.rs:8:10
  |
8 | #[derive(GraphQLObject)]
  |          ^^^^^^^^^^^^^ unsatisfied trait bound
  |
help: the trait `IsOutputType<__S>` is not implemented for `ObjB`
 --> fail/object/derive_field_non_output_return_type.rs:4:1
  |
4 | struct ObjB {
  | ^^^^^^^^^^^
  = help: the following other types implement trait `IsOutputType<S>`:
            `&T` implements `IsOutputType<S>`
            `Arc<T>` implements `IsOutputType<S>`
            `ArcStr` implements `IsOutputType<__S>`
            `Argument<S>` implements `IsOutputType<S>`
            `Box<T>` implements `IsOutputType<S>`
            `EnumValue` implements `IsOutputType<__S>`
            `ID` implements `IsOutputType<__S>`
            `ObjA` implements `IsOutputType<__S>`
          and $N others
